Amended CSS and layout issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,6 +108,10 @@ th{
     z-index: 0;
 }
 
+#p_title{
+    padding: 15px 0;
+}
+
 /* >>>>>>>>>>>>>>>>>>>> TEXT <<<<<<<<<<<<<<<<<<<< */
 
 h1,
@@ -208,10 +212,6 @@ p{
 
 .error{
     color: red;
-}
-
-#p_title{
-    margin-top: 15px;
 }
 
 /* >>>>>>>>>>>>>>>>>>>> NAVBAR <<<<<<<<<<<<<<<<<<<< */
